--- a/UnicornHabits/AddHabitWidget.ui
+++ b/UnicornHabits/AddHabitWidget.ui
@@ -229,15 +229,6 @@
        </property>
       </widget>
      </item>
-     <item row="8" column="1">
-      <widget class="QLineEdit" name="repeatPeriod">
-       <property name="font">
-        <font>
-         <pointsize>12</pointsize>
-        </font>
-       </property>
-      </widget>
-     </item>
      <item row="9" column="0">
       <widget class="QLabel" name="unitsLabel">
        <property name="font">
@@ -270,6 +261,25 @@
        <item>
         <property name="text">
          <string>Volume</string>
+        </property>
+       </item>
+      </widget>
+     </item>
+     <item row="8" column="1">
+      <widget class="QComboBox" name="repeatPeriod">
+       <property name="font">
+        <font>
+         <pointsize>12</pointsize>
+        </font>
+       </property>
+       <item>
+        <property name="text">
+         <string>Everyday</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>Everyweek</string>
         </property>
        </item>
       </widget>
