--- a/UnicornHabits/AddHabitWidget.ui
+++ b/UnicornHabits/AddHabitWidget.ui
@@ -49,15 +49,6 @@
        </property>
       </widget>
      </item>
-     <item row="10" column="1">
-      <widget class="QSpinBox" name="amount">
-       <property name="font">
-        <font>
-         <pointsize>12</pointsize>
-        </font>
-       </property>
-      </widget>
-     </item>
      <item row="12" column="1">
       <widget class="QPushButton" name="okBtn">
        <property name="sizePolicy">
@@ -282,6 +273,15 @@
          <string>Everyweek</string>
         </property>
        </item>
+      </widget>
+     </item>
+     <item row="10" column="1">
+      <widget class="QDoubleSpinBox" name="amount">
+       <property name="font">
+        <font>
+         <pointsize>12</pointsize>
+        </font>
+       </property>
       </widget>
      </item>
     </layout>
