--- a/UnicornHabits/HabitWidget.ui
+++ b/UnicornHabits/HabitWidget.ui
@@ -57,6 +57,18 @@
        </widget>
       </item>
       <item>
+       <widget class="QLabel" name="deadlineLabel">
+        <property name="font">
+         <font>
+          <pointsize>12</pointsize>
+         </font>
+        </property>
+        <property name="text">
+         <string/>
+        </property>
+       </widget>
+      </item>
+      <item>
        <widget class="QLabel" name="repeatLabel">
         <property name="font">
          <font>
@@ -68,6 +80,18 @@
         </property>
         <property name="alignment">
          <set>Qt::AlignCenter</set>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QLabel" name="amountLabel">
+        <property name="font">
+         <font>
+          <pointsize>12</pointsize>
+         </font>
+        </property>
+        <property name="text">
+         <string/>
         </property>
        </widget>
       </item>
