--- a/UnicornHabits/AddHabitWidget.ui
+++ b/UnicornHabits/AddHabitWidget.ui
@@ -252,6 +252,9 @@
          <pointsize>12</pointsize>
         </font>
        </property>
+       <property name="value">
+        <double>1.000000000000000</double>
+       </property>
       </widget>
      </item>
      <item row="1" column="1">
@@ -261,7 +264,23 @@
          <pointsize>12</pointsize>
         </font>
        </property>
+       <property name="text">
+        <string>Habit1</string>
+       </property>
       </widget>
+     </item>
+     <item row="10" column="0">
+      <spacer name="verticalSpacer">
+       <property name="orientation">
+        <enum>Qt::Vertical</enum>
+       </property>
+       <property name="sizeHint" stdset="0">
+        <size>
+         <width>20</width>
+         <height>40</height>
+        </size>
+       </property>
+      </spacer>
      </item>
     </layout>
    </item>
