--- a/UnicornHabits/AddHabitWidget.ui
+++ b/UnicornHabits/AddHabitWidget.ui
@@ -157,6 +157,11 @@
          <string>Liters</string>
         </property>
        </item>
+       <item>
+        <property name="text">
+         <string>Steps</string>
+        </property>
+       </item>
       </widget>
      </item>
      <item row="9" column="0">
@@ -251,6 +256,9 @@
         <font>
          <pointsize>12</pointsize>
         </font>
+       </property>
+       <property name="maximum">
+        <double>99999.990000000005239</double>
        </property>
        <property name="value">
         <double>1.000000000000000</double>
