--- a/UnicornHabits/LoginWidget.ui
+++ b/UnicornHabits/LoginWidget.ui
@@ -24,7 +24,7 @@
         </font>
        </property>
        <property name="text">
-        <string>Nazwa użytkownika:</string>
+        <string>Username:</string>
        </property>
       </widget>
      </item>
@@ -86,7 +86,7 @@
         </font>
        </property>
        <property name="text">
-        <string>Zaloguj</string>
+        <string>Login</string>
        </property>
       </widget>
      </item>
